--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -46,6 +46,22 @@ $(function() {
       })
   })
 
+  $('#display-recommendations-help').click(function() {
+      $('.recommendations-help-text').slideToggle('fast');
+  })
+
+  $('.hide-recommendation').click(function() {
+      icon = $(this).closest('.user-list-icon');
+      id = $(this).attr('data-target')
+      type = $(this).attr('data-type')
+      bootbox.confirm("Are you sure you want to hide this recommendation? There isn't currently a way to restore hidden recommendations.", function(result){
+          $.post('/api/recommendations/remove/' + type + '/' + id, function(){
+              icon.remove();
+          }).fail(function () { console.log("I errored!"); bootbox.alert("Hiding this recommendation failed! Refresh the page and try again."); });
+      });
+  })
+
+
   $("#darkModeToggle").click(function(e){
     e.preventDefault();
     if ($(this).hasClass('notification-active')){
