--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,24 +1,72 @@
 <section id="homeBody" class="row justify-content-center">
-  <div class="col-lg-8">
-		{{> newpostform }}
-    <div id="checkNewPosts"></div>
-    {{> newpostsavailable}}
-		<div class="container commentsList" id="postsContainer">
-		</div>
-    {{> infinitescrollrequests}}
-  </div>
+    <div class="col-lg-8">
+        {{> newpostform }}
+        <div id="checkNewPosts"></div>
+        {{> newpostsavailable}}
+        <div class="container commentsList" id="postsContainer"></div>
+        {{> infinitescrollrequests}}
+    </div>
+    {{#if loggedInUserData.settings.showRecommendations}}
+        <div class="col-md-4 d-none d-lg-block">
+            <section class="recommendations">
+                <h4>Recommended</h4>
+                {{#or userRecommendations popularCommunities}}
+                    <hr />
+                {{/or}}
+                {{#if userRecommendations}}
+                    <h5>People</h5>
+                    <div class="user-list">
+                      {{#each userRecommendations}}
+                        <div class="user-list-icon">
+                            <a href="/{{this.username}}" data-toggle="tooltip" title="@{{this.username}}">
+                                <img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                            </a>
+                            <a href="#" class="hide-recommendation" data-type="user" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                      {{/each}}
+                    </div>
+                {{/if}}
+                {{#if popularCommunities}}
+                    {{#if userRecommendations}}
+                        <hr />
+                    {{/if}}
+                    <h5>Communities</h5>
+                    <div class="user-list">
+                        {{#each popularCommunities}}
+                            <div class="user-list-icon">
+                                <a href="/community/{{this.slug}}" data-toggle="tooltip" title="{{this.name}}"><img src="/images/communities/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" /></a>
+                                <a href="#" class="hide-recommendation" data-type="community" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
+                            </div>
+                        {{/each}}
+                    </div>
+                {{/if}}
+                <p class="recommendations-links">
+                    <a href="#" id="display-recommendations-help">Huh?</a> &middot; <a href="/settings#recommendations-settings">Turn off</a>
+                </p>
+                <div class="recommendations-help-text">
+                    <p class="small">
+                        The list of recommended people is made up of people <strong>trusted</strong> by the people you trust and people <strong>followed</strong> by the people you trust. The recommended communities are simply those which have seen activity in the last two weeks.
+                    </p>
+                    <p class="small">
+                        Click the cross next to an icon to hide that person or community from your recommendations.
+                    </p>
+                </div>
+            </section>
+        </div>
+    {{/if}}
 </section>
+
 {{> filemessage }}
 
 <script>
-$('#postsContainer').infiniteScroll({
-  path: function() {
-    var pageNumber = ( this.loadCount + 1 );
-    return '/showposts/home/{{loggedInUserData._id}}/' + pageNumber + '?' + (+new Date).toString(36).slice(-8);
-  },
-  append: '.post',
-  prefill: true,
-  history: true,
-  status: '.page-load-status'
-});
+    $('#postsContainer').infiniteScroll({
+        path: function() {
+            var pageNumber = ( this.loadCount + 1 );
+            return '/showposts/home/{{loggedInUserData._id}}/' + pageNumber + '?' + (+new Date).toString(36).slice(-8);
+        },
+        append: '.post',
+        prefill: true,
+        history: true,
+        status: '.page-load-status'
+    });
 </script>
