--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -45,7 +45,7 @@
                 </p>
                 <div class="recommendations-help-text">
                     <p class="small">
-                        The list of recommended people is made up of people <strong>trusted</strong> by the people you trust and people <strong>followed</strong> by the people you trust. The recommended communities are simply those which have seen activity in the last two weeks.
+                        The list of recommended people is made up of people <strong>trusted</strong> by the people you trust and people <strong>followed</strong> by the people you trust. The recommended communities are those which have seen activity in the last two weeks and have someone you trust or follow in them.
                     </p>
                     <p class="small">
                         Click the cross next to an icon to hide that person or community from your recommendations.
