--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -33,12 +33,12 @@
 {{#unless isOwnProfile}}
     <div class="user-tags">
         {{#if userTrustsYou}}
-            <span class="badge badge-secondary mr-1">
+            <span class="tag tag-green">
                 Trusts you
             </span>
         {{/if}}
         {{#if userFollowsYou}}
-            <span class="badge badge-secondary mr-1">
+            <span class="tag tag-green">
                 Follows you
             </span>
         {{/if}}
