--- a/views/partials/communitysidebar.handlebars
+++ b/views/partials/communitysidebar.handlebars
@@ -7,8 +7,8 @@
 </h3>
 
 <div class="community-tags">
-  <span class="badge badge-secondary mr-1">{{#eq communityData.settings.joinType "open"}}Open{{else}}Approval only{{/eq}}</span>
-  <span class="badge badge-secondary">{{#eq communityData.settings.visibility "public"}}Public{{else}}Private{{/eq}}</span>
+  <span class="tag">{{#eq communityData.settings.joinType "open"}}Open{{else}}Approval only{{/eq}}</span>
+  <span class="tag">{{#eq communityData.settings.visibility "public"}}Public{{else}}Private{{/eq}}</span>
 </div>
 
 {{#if communityData.descriptionParsed}}
