--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -2,7 +2,7 @@
 <div class="row mb-3">
   <div class="col-6 d-flex">
 {{/if}}
-    <div id="profileImageContainer" class="{{#if isOwnProfile}}own-profile-image{{/if}}">
+    <div id="profileImageContainer" class="{{#if isOwnProfile}}own-profile-image{{else}}user-image{{/if}}">
       <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}/images/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
     </div>
 {{#if isOwnProfile}}
