--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,36 +10,43 @@
         <div class="col-md-4 d-none d-lg-block">
             <section class="recommendations">
                 <h4>Recommended</h4>
-                {{#or userRecommendations popularCommunities}}
-                    <hr />
-                {{/or}}
-                {{#if userRecommendations}}
-                    <h5>People</h5>
-                    <div class="user-list">
-                      {{#each userRecommendations}}
-                        <div class="user-list-icon">
-                            <a href="/{{this.username}}" data-toggle="tooltip" title="@{{this.username}}">
-                                <img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
-                            </a>
-                            <a href="#" class="hide-recommendation" data-type="user" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
-                        </div>
-                      {{/each}}
-                    </div>
-                {{/if}}
-                {{#if popularCommunities}}
-                    {{#if userRecommendations}}
+                {{#neither userRecommendations popularCommunities}}
+                    <p style="font-weight: 300;">
                         <hr />
-                    {{/if}}
-                    <h5>Communities</h5>
-                    <div class="user-list">
-                        {{#each popularCommunities}}
+                        Out of suggestions - invite your friends!
+                    </p>
+                {{else}}
+                    {{#or userRecommendations popularCommunities}}
+                        <hr />
+                    {{/or}}
+                    {{#if userRecommendations}}
+                        <h5>People</h5>
+                        <div class="user-list">
+                          {{#each userRecommendations}}
                             <div class="user-list-icon">
-                                <a href="/community/{{this.slug}}" data-toggle="tooltip" title="{{this.name}}"><img src="/images/communities/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" /></a>
-                                <a href="#" class="hide-recommendation" data-type="community" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
+                                <a href="/{{this.username}}" data-toggle="tooltip" title="@{{this.username}}">
+                                    <img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                                </a>
+                                <a href="#" class="hide-recommendation" data-type="user" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
                             </div>
-                        {{/each}}
-                    </div>
-                {{/if}}
+                          {{/each}}
+                        </div>
+                    {{/if}}
+                    {{#if popularCommunities}}
+                        {{#if userRecommendations}}
+                            <hr />
+                        {{/if}}
+                        <h5>Communities</h5>
+                        <div class="user-list">
+                            {{#each popularCommunities}}
+                                <div class="user-list-icon">
+                                    <a href="/community/{{this.slug}}" data-toggle="tooltip" title="{{this.name}}"><img src="/images/communities/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" /></a>
+                                    <a href="#" class="hide-recommendation" data-type="community" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
+                                </div>
+                            {{/each}}
+                        </div>
+                    {{/if}}
+                {{/neither}}
                 <p class="recommendations-links">
                     <a href="#" id="display-recommendations-help">Huh?</a> &middot; <a href="/settings#recommendations-settings">Turn off</a>
                 </p>
