Slightly narrower posts container - I'm not sure about this...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -687,6 +687,11 @@ hr {
   padding: 0;
 }
 
+#homeBody,
+#userBody {
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   #homeBody,
   #userBody {
