Changed 'turn off' to 'hide'

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -50,7 +50,7 @@
                             {{/if}}
                         {{/neither}}
                         <p class="discovery-help-links">
-                            <a href="#" id="display-recommendations-help">Huh?</a> &middot; <a href="/settings#discovery-settings">Turn off</a>
+                            <a href="#" id="display-recommendations-help">Huh?</a> &middot; <a href="/settings#discovery-settings">Hide</a>
                         </p>
                         <div class="recommendations-help-text">
                             <p class="small">
@@ -72,7 +72,7 @@
                             </p>
                         {{/each}}
                         <p class="discovery-help-links">
-                            <a href="/settings#discovery-settings">Turn off</a>
+                            <a href="/settings#discovery-settings">Hide</a>
                         </p>
                     </section>
                 {{/if}}
