--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -33,14 +33,10 @@
 {{#unless isOwnProfile}}
     <div class="user-tags">
         {{#if userTrustsYou}}
-            <span class="tag tag-green">
-                Trusts you
-            </span>
+            <span class="tag tag-green">Trusts you</span>
         {{/if}}
         {{#if userFollowsYou}}
-            <span class="tag tag-green">
-                Follows you
-            </span>
+            <span class="tag tag-green">Follows you</span>
         {{/if}}
     </div>
 {{/unless}}
