--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -53,6 +53,14 @@
             <hr />
             <h4 id="email_settings">Emails</h4>
             <div class="form-group">
+                    <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="sendMentionEmails" id="sendMentionEmails" {{#if loggedInUserData.settings.sendMentionEmails}}checked{{/if}}>
+                            <label class="form-check-label" for="sendMentionEmails">
+                                    Receive an email when someone mentions you
+                            </label>
+                    </div>
+            </div>
+            <div class="form-group">
                 <label for="profileVisibility">Frequency of digest emails</label>
                 <p class="form-text small mt-0">sweet can send you a daily or weekly digest email with a summary of your unseen notifications.</p>
                 <select name="digestEmailFrequency" class="form-control" id="digestEmailFrequency">
